--- a/electron/splash.html
+++ b/electron/splash.html
@@ -7,7 +7,7 @@
       content="default-src 'self'; style-src 'self' 'unsafe-inline'"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hour Management</title>
+    <title>Liliance</title>
     <style>
       :root {
         font-family: 'Segoe UI', system-ui, sans-serif;
@@ -92,7 +92,7 @@
   </head>
   <body>
     <div class="card">
-      <h1>Hour Management</h1>
+      <h1>Liliance</h1>
       <p>Starting your local workspace and time tracker.</p>
       <div class="loader">
         <span class="dot"></span>
